data/derived/comb/progs/unify/prog5575.ml.out
Characters 393-486:
  | ( 6, _ ) -> buildThresh(build(rand, depth-1 ), build(rand, depth-1 ), build(rand, depth-1 ), build(rand, depth-1 ) );;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd
       but an expression was expected of type expr * expr * expr
